@@ -1,9 +1,16 @@
 <FindBugsFilter>
   <Match>
     <Or>
+      <Class name="org.apache.hadoop.fs.XAttr"/>
+      <Class name="org.apache.hadoop.fs.XAttr$Builder"/>
+      <Class name="org.apache.hadoop.hdfs.inotify.EventBatch"/>
       <Class name="org.apache.hadoop.hdfs.protocol.HdfsFileStatus"/>
       <Class name="org.apache.hadoop.hdfs.protocol.LocatedBlock"/>
+      <Class name="org.apache.hadoop.hdfs.protocol.BlockStoragePolicy"/>
+      <Class name="org.apache.hadoop.hdfs.protocol.CorruptFileBlocks"/>
+      <Class name="org.apache.hadoop.hdfs.protocol.DirectoryListing"/>
       <Class name="org.apache.hadoop.hdfs.security.token.block.BlockTokenIdentifier"/>
+      <Class name="org.apache.hadoop.hdfs.security.token.block.DataEncryptionKey"/>
     </Or>
     <Bug pattern="EI_EXPOSE_REP,EI_EXPOSE_REP2" />
   </Match>
