@@ -458,6 +458,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-8185. Separate client related routines in HAUtil into a new class.
     (wheat9)
 
+    HDFS-8218. Move classes that used by ClientProtocol into hdfs-client.
+    (wheat9)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
